<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu1"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_menu1"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_menu2"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_menu2"
        app:showAsAction="ifRoom"
        android:enabled="true"
        />
    <item
        android:id="@+id/navigation_menu3"
        android:icon="@drawable/ic_menu3_black_24dp"
        android:title="@string/title_menu3"
        app:showAsAction="ifRoom"
        android:enabled="true"
        />

    <item
        android:id="@+id/navigation_menu4"
        android:icon="@drawable/ic_menu4_black_24dp"
        android:title="@string/title_menu4"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_menu5"
        android:icon="@drawable/ic_menu5_black_24dp"
        android:title="@string/title_menu5"
        app:showAsAction="ifRoom"
        android:enabled="true"/>


</menu>
